crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__adding_primary_key_constraint__test__serial_primary_key.snap
---
source: crates/squawk_linter/src/rules/adding_primary_key_constraint.rs
expression: errors
---
[
    Violation {
        code: AddingSerialPrimaryKeyField,
        message: "Adding a primary key constraint requires an `ACCESS EXCLUSIVE` lock that will block all reads and writes to the table while the primary key index is built.",
        text_range: 43..54,
        messages: [],
    },
]
